--- a/1.2.0/Enloa/user.css
+++ b/1.2.0/Enloa/user.css
@@ -17,7 +17,7 @@ body, .content-wrapper {
 .skin-blue .main-header .navbar,
 .skin-blue .main-header .logo,
 .main-footer {
-	background-color: #203A43 !important;
+	background-color: #203A43 !tmportant;
 	border-color: transparent !important;
 	box-shadow: none !important;
 }
