--- a/Stuff/colna/user.css
+++ b/Stuff/colna/user.css
@@ -17,7 +17,7 @@ body, .content-wrapper {
 .skin-blue .main-header .navbar,
 .skin-blue .main-header .logo,
 .main-footer {
-	background-color: #ff0000 !important;
+	background-color: #232323 !important;
 	border-color: transparent !important;
 	box-shadow: none !important;
 }
