--- a/Stuff/colna/user.css
+++ b/Stuff/colna/user.css
@@ -78,7 +78,7 @@ body, .content-wrapper {
 .chAlWS,
 .iTwxpv,
 .skin-blue .main-header .logo {
-	color: #fafafa !important;
+	color: #ffffff !important;
 }
 
 
@@ -109,9 +109,9 @@ body, .content-wrapper {
 .jqQFoq,
 .bEKRkc,
 .dRhlIo {
-	background-color: #203A43 !important;
+	background-color: #000000 !important;
 	border-radius: 15px !important;
-	border-color: #203A43 !important;
+	border-color: #212121 !important;
 }
 
 
