--- a/Stuff/colna/user.css
+++ b/Stuff/colna/user.css
@@ -215,7 +215,7 @@ pre,
 .input-group .input-group-addon,
 .select2-container--default .select2-selection--single,
 .select2-container--default .select2-selection--multiple {
-	border-color: #3F778A !important;
+	border-color: none !important;
 	background-color: #0F2229 !important;
 	border-radius: 15px !important;
 }
@@ -273,22 +273,6 @@ pre,
 }
 
 
-/* Changes console */
-
-.LbmBV,
-.hahdAC {
-	border-radius: 15px !important;
-	background-color: #000000 !important;
-	margin-bottom: .75vw !important;
-}
-
-
-/* Changes console color */
-
-.xterm .xterm-screen,
-.xterm .xterm-viewport {
-	background-color: #000000 !important;
-}
 
 
 /* Changes scroll bar */
@@ -309,19 +293,6 @@ pre,
 	border-radius: 15px !important;
 }
 
-
-/* Changes console input */
-
-.JQChZ,
-.csimfD {
-	border-color: #3F778A !important;
-	background-color: #203A43 !important;
-	border-radius: 15px !important;
-}
-
-.jSyjnD {
-	border-color: #3F778A !important;
-}
 
 
 /* Changes input text area */
