--- a/Stuff/colna/user.css
+++ b/Stuff/colna/user.css
@@ -1,7 +1,7 @@
 /* Changes Background */
 
 body, .content-wrapper {
-	background: url("http://51.81.11.20:49153/wp-content/uploads/2021/01/76055b9dd0ec60e4af44aac3fbbf45df.jpg") !important;
+	background: url("https://yiteee.github.io/thems/67494.jpg") !important;
 }
 
 
