--- a/Stuff/colna/user.css
+++ b/Stuff/colna/user.css
@@ -1,7 +1,7 @@
 /* Changes Background */
 
 body, .content-wrapper {
-	background: url("https://yiteee.github.io/thems/67494.jpg") !important;
+	background: url("https://yiteee.github.io/thems/cool-backgrounds-futuristic-technology-pack-deals-bypeople-39.jpg") !important;
 }
 
 
