--- a/Stuff/colna/user.css
+++ b/Stuff/colna/user.css
@@ -1,7 +1,7 @@
 /* Changes Background */
 
 body, .content-wrapper {
-	background: url("https://yiteee.github.io/thems/cool-backgrounds-hd-vector-pack-deals-bypeople-featured.jpg") !important;
+	background: url("https://yiteee.github.io/thems/cool-backgrounds-hd-vector-pack-deals-bypeople-featured.png") !important;
 }
 
 
