--- a/Stuff/colna/user.css
+++ b/Stuff/colna/user.css
@@ -20,6 +20,7 @@ body, .content-wrapper {
 	background-color: #232323 !important;
 	border-color: transparent !important;
 	box-shadow: none !important;
+	opacity: 0.7 ;
 }
 
 
