--- a/Stuff/colna/user.css
+++ b/Stuff/colna/user.css
@@ -238,7 +238,7 @@ pre,
 	border-color: #3F778A !important;
 	background-color: #203A43 !important;
 	border-radius: 0px !important;
-	margin-bottom: 1vw !important;
+	margin-bottom: 0vw !important;
 }
 
 
@@ -250,7 +250,7 @@ pre,
 .cFegvH,
 .box-body {
 	border-color: transparent !important;
-	background-color: #192E35 !important;
+	background-color: #000000 !important;
 	border-radius: 0px !important;
 }
 
@@ -307,18 +307,7 @@ pre,
 }
 
 
-/* Changes schedule, Users, Network, File Manager */
 
-.kqnFDg,
-.kHuGmn,
-.hIHBYg,
-.eGIYvK,
-.bmqKpQ,
-.fQUMLV {
-	border-radius: 0px !important;
-	overflow: hidden !important;
-	background-color: #203A43 !important;
-}
 
 
 /* Changes Network Icon */
