--- a/Stuff/colna/user.css
+++ b/Stuff/colna/user.css
@@ -163,7 +163,7 @@ code,
 	border-radius: 0px;
 	background-color: #202020 !important;
 	border-color: #242424 !important;
-	color: #000000 !important;
+	color: #ffffff !important;
 }
 
 
@@ -462,7 +462,7 @@ hr {
 .LbmBV,
 .hahdAC {
 	
-	background-color: #192E35 !important;
+	background-color: #000000 !important;
 	
 }
 
