--- a/Stuff/colna/user.css
+++ b/Stuff/colna/user.css
@@ -455,7 +455,7 @@ hr {
 .bmqKpQ,
 .fQUMLV {
 	
-	background-color: #ffffff !important;
+	background-color: #000000 !important;
 
 /* Changes console */
 
