--- a/Stuff/colna/user.css
+++ b/Stuff/colna/user.css
@@ -39,10 +39,6 @@ pre,
 }
 
 
-
-
-
-
 /* Changes input text area */
 
 .kZaCVF {
@@ -51,6 +47,44 @@ pre,
 	border-radius: 0px !important;
 }
 
+/* Changes console */
+
+.LbmBV,
+.hahdAC {
+	
+	background-color: #000000 !important;
+	
+}
+
+
+/* Changes console color */
+
+.xterm .xterm-screen,
+.xterm .xterm-viewport {
+	background-color: #000000 !important;
+}
+/* Changes console input */
+
+[type="text"],
+[type="email"],
+[type="url"],
+[type="password"],
+[type="number"],
+[type="date"],
+[type="datetime-local"],
+[type="month"],
+[type="search"],
+[type="tel"],
+[type="time"],
+[type="week"],
+[multiple],
+textarea,
+select {
+	background-color: #000000 !important;
+	border-color: transparent !important;
+	color: #fafafa !important;
+	border-radius: 0px !important;
+}
 
 
 
