--- a/Stuff/colna/user.css
+++ b/Stuff/colna/user.css
@@ -86,6 +86,38 @@ select {
 	border-radius: 0px !important;
 }
 
+/* Changes Text Color */
+
+.fNmetC,
+.hcJQtJ,
+.ToRTP,
+.dPhkRJ,
+.cKOMAz,
+.jSyjnD,
+.jywpgX,
+.eFKDEh,
+.dUzAFF,
+.cbFifO,
+.farUaV,
+.dMZZHB,
+.lgYuLu,
+.gSUxYg,
+.cdBzyv,
+.gxlLzB,
+.jexamK,
+.eWxPIu,
+.eWxPIu:hover,
+.jXGwrM,
+.mIIYh,
+.iambCQ,
+.iZqkRd,
+.chAlWS,
+.iTwxpv,
+.skin-blue .main-header .logo {
+	color: #ffffff !important;
+	opacity: 1 !important;
+}
+
 
 
 
