--- a/Stuff/colna/user.css
+++ b/Stuff/colna/user.css
@@ -4,7 +4,7 @@
 /* Changes Background */
 
 body, .content-wrapper {
-	background: url("https://yiteee.github.io/thems/cool-backgrounds-futuristic-technology-pack-deals-bypeople-39.png") !important;
+	background: url("https://yiteee.github.io/thems/stefan-katrandjiski-RTfJ6efXaj8-unsplash.jpg") !important;
 }
 
 
